--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
   "homepage": "https://github.com/RezaRostamiNikoo/xsd-parser/blob/master/README.md",
   "files": [
     "package.json"
-  ]
+  ],
+  "dependencies": {
+    "@types/lodash": "^4.14.196",
+    "@xmldom/xmldom": "^0.8.10",
+    "deepmerge": "^4.3.1",
+    "lodash": "^4.17.21"
+  }
 }
