--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "declarationDir": "dist/types"
+    "declarationDir": "dist/types",
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts"
