--- a/.github/workflows/publish_to_npm.yaml
+++ b/.github/workflows/publish_to_npm.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: "18"
       - run: npm ci
-      - run: npm build
+      - run: npm run build
       - run: npm test
       - uses: JS-DevTools/npm-publish@v2
         with:
