--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xsd-parser",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
