--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xsd-parser",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
@@ -33,7 +33,8 @@
   },
   "homepage": "https://github.com/RezaRostamiNikoo/xsd-parser/blob/master/README.md",
   "files": [
-    "package.json"
+    "package.json",
+    "dist"
   ],
   "dependencies": {
     "@types/lodash": "^4.14.196",
