--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,13 @@
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "dist/types",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "src/**/*.ts"
+  ],
+  "exclude": [
+    "./node_modules"
   ]
 }
