--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "dependencies": {
     "@types/lodash": "^4.14.196",
     "@xmldom/xmldom": "^0.8.10",
-    "deepmerge": "^4.3.1",
-    "lodash": "^4.17.21"
+    "predefined-ds": "^1.7.2"
   }
 }
