--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "jest": "^29.6.2",
+    "ts-bundle": "^0.3.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
